# mlib

./: .gitignore  CMakeLists.txt  doctest_common_main.cpp  mlib.cmake  readme.txt
apps/: CMakeLists.txt  density_estimate.cpp  fuse_timestamps.cpp  inspect_hilti.cpp  inspect_kitti_mots.cpp  inspect_kitti_odometry.cpp  inspect_stereo_dataset.cpp  param_gui.cpp  parameter_editor_test.cpp  prefilter_image.cpp  show_mdlidar.cpp  spline_imu_test.cpp  sqlite.cpp  test_eco.cpp  test_lookat.cpp  test_stereo.cpp  test_undistort.cpp  verified_write2file.cpp  vis_manip.cpp
apps/raytrace/: CMakeLists.txt  README.md  camera.h  hitable.h  hitable_list.h  main.cc  material.cpp  material.h  ray.h  rt  sphere.h  vec3.h
ceres_util/: CMakeLists.txt  pose_parametrization.cpp  pose_parametrization.h  stereo_errors.h  triangulate.cpp  triangulate.h
cuda/: CMakeLists.txt  brief.cuh  clone_dependencies.h  common.cu  common.cuh  cuda_helpers.cu  cuda_helpers.h  cuda_interface.cu  cuda_interface.h  devmemmanager.cu  devmemmanager.h  devstreampool.cu  devstreampool.h  edgels.h  mbm.cu  mbm.h  median.cuh  mosse_stereo.cpp  mosse_stereo.h  opencv.h  pnp.cu  pnp.h  readme.txt  result.h  temporalstereo.cu  temporalstereo.h
cuda/apps/: CMakeLists.txt  add.cu  mbm_main.cpp  raytrace.cu
cuda/klt/: CMakeLists.txt  cornerdetector.h  feature.h  featurepool.h  readme.txt  tracker.h
cuda/tests/: CMakeLists.txt  test_cvl_matrix.cu  test_dmm.cu
datasets/: CMakeLists.txt  frameid2time.cpp  frameid2time.h  image_sample.cpp  image_sample.h  imu_sample.cpp  imu_sample.h  interface.cpp  interface.h  sample.cpp  sample.h  sequence.h  stereo_calibration.cpp  stereo_calibration.h  stereo_dataset.cpp  stereo_dataset.h  stereo_datasets.cpp  stereo_datasets.h  stereo_sample.cpp  stereo_sample.h  stereo_sequence.cpp  stereo_sequence.h
datasets/daimler/: CMakeLists.txt  calibration.cpp  calibration.h  database.h  dataset.cpp  dataset.h  results_types.h  sample.cpp  sample.h  sequence.cpp  sequence.h
datasets/hilti/: CMakeLists.txt  calibration.h  dataset.cpp  dataset.h  sample.cpp  sample.h  sequence.cpp  sequence.h
datasets/kitti/: CMakeLists.txt
datasets/mdlidar/: CMakeLists.txt  read_lidar.cpp  read_lidar.h  test_read_lidar.cpp  test_read_state.cpp
datasets/tum/: CMakeLists.txt  inspect_tum.cpp  tum.cpp  tum.h
gui/: CMakeLists.txt  filedialog.cpp  filedialog.h  image_viewer_widget.cpp  image_viewer_widget.h  label.cpp  label.h  main.cpp
gui/example/: CMakeLists.txt  a.h  main.cpp
gui/param/: CMakeLists.txt  int_parameter.cpp  int_parameter.h  parametrized.cpp  pset.cpp  pset.h  real_parameter.cpp
gui/pgui/: CMakeLists.txt  display.cpp  display.h  editor.cpp  editor.h  int_parameter.cpp  int_parameter.h  label.cpp  label.h  param_gui.cpp  param_gui.h  param_tree.cpp  param_tree.h  param_tree_item.cpp  param_types.h  param_widget.cpp  param_widget.h  parameter.cpp  parameter.h  parametrized.cpp  params.h  pset.cpp  pset.h  pset_widget.cpp  pset_widget.h  real_parameter.cpp  real_parameter.h
opencv_util/: CMakeLists.txt  anms.cpp  anms.h  convert.cpp  convert.h  cv.cpp  cv.h  draw_arrow.cpp  draw_arrow.h  draw_box.cpp  draw_box.h  imshow.cpp  imshow.h  imwrite.cpp  imwrite.h  read_image.cpp  read_image.h  stereo.cpp  stereo.h  type2str.cpp  type2str.h
param/: CMakeLists.txt  enum_parameter.cpp  enum_parameter.h  int_parameter.cpp  int_parameter.h  parameter.cpp  parameter.h  parametrized.cpp  parametrized.h  pset.cpp  pset.h  real_parameter.cpp  real_parameter.h
parameter_editor/: CMakeLists.txt  display.cpp  display.h  editor.cpp  editor.h  label.cpp  label.h  param_tree.cpp  param_tree.h  param_tree_item.cpp  param_tree_item.h  param_widget.cpp  param_widget.h  pset_widget.cpp  pset_widget.h
parameter_editor/apps/: CMakeLists.txt  parameter_editor_test.cpp
plotter/: CMakeLists.txt  plot.cpp  plot.h
plotter/mtgui/: CMakeLists.txt  mtgui.cpp  mtgui.h
sfm/: CMakeLists.txt
sfm/anms/: CMakeLists.txt  base.cpp  base.h  draw.cpp  draw.h  grid.cpp  grid.h  util.cpp  util.h
sfm/camera/: CMakeLists.txt  distortion_map.h
sfm/p3p/: CMakeLists.txt  p4p.cpp  p4p.h  parameters.cpp  parameters.h  pnp_ransac.cpp  pnp_ransac.h
sfm/solvers/: essential_matrix_solver.cpp  essential_matrix_solver.h  geometry_tools.cpp  geometry_tools.h  motion_tester.cpp  motion_tester.h
stream/: CMakeLists.txt  buffer_node.h  delayed_source.h  node.h  sink.h  source.h  synchonizing_node.h
tests/: CMakeLists.txt  datafile.h  doctest_main.cpp  test_include_all.cpp  test_matrix.cpp  test_p4p.h  test_pnp.cpp  test_pose.cpp  test_serialize.cpp  test_syncqueue.cpp  test_tensor.cpp  test_triangulate_nl.cpp  test_triangulation.cpp
tests/scripts/: generaterottests.m
utils/: CMakeLists.txt  argparser.cpp  argparser.h  auto_serialization.h  binary_search.h  bounding_box.cpp  bounding_box.h  buffered_dataset_stream.cpp  buffered_dataset_stream.h  checksum.cpp  checksum.h  colormap.cpp  colormap.h  common_pragmas.h  common_ptr.h  configuration.cpp  configuration.h  constants.h  continuous_image.h  derivable_trig.cpp  derivable_trig.h  files.cpp  files.h  histogram.h  imu_data.h  informative_asserts.cpp  informative_asserts.h  interpolation.h  kde.cpp  kde.h  limited_history.h  matlab_helpers.cpp  matlab_helpers.h  memmanager.h  mlibtime.cpp  mlibtime.h  nd_bucket_map.cpp  nd_bucket_map.h  numerics.h  random.cpp  (+25 more)
utils/colormap_tables/: jet_colormap.h
utils/cvl/: bimap.h  converteigen.h  convertopencv.h  epipolar_geometry.h  (+16 more)
vis/: CMakeLists.txt  CameraMatrixManipulator.h  CvGL.cpp  CvGL.h  GLTools.cpp  GLTools.h  arrow.cpp  arrow.h  axis_marker.cpp  axis_marker.h  change_viewpoint_order.cpp  change_viewpoint_order.h  convertosg.cpp  convertosg.h  fbocamera.cpp  fbocamera.h  flow.cpp  flow.h  flow_field.cpp  flow_field.h  flow_viewer.cpp  flow_viewer.h  fps.cpp  fps.h  main_event_handler.cpp  main_event_handler.h  manipulator.cpp  manipulator.h  mlib_simple_point_cloud_viewer.cpp  mlib_simple_point_cloud_viewer.h  nanipulator.cpp  nanipulator.h  order.cpp  order.h  pc_order.cpp  pc_order.h  point_cloud.cpp  point_cloud.h
(+112 files in other folders)
